src/test/ui/issues/issue-7013.stderr
error[E0277]: `Rc<RefCell<A>>` cannot be sent between threads safely
  --> $DIR/issue-7013.rs:26:19
   |
LL |     let a = A {v: box B{v: None} as Box<dyn Foo + Send>};
   |                   ^^^^^^^^^^^^^^ `Rc<RefCell<A>>` cannot be sent between threads safely
   |
   = help: within `B`, the trait `Send` is not implemented for `Rc<RefCell<A>>`
   = note: required because it appears within the type `Option<Rc<RefCell<A>>>`
   = note: required because it appears within the type `B`
   = note: required for the cast to the object type `dyn Foo + Send`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
